--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@monaco-editor/react": "^4.6.0",
     "framer-motion": "^10.16.4",
+    "monaco-editor-nginx": "^1.0.14",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
